Closed Bug 516602 Opened 15 years ago Closed 15 years ago

Can't look around in Google Maps' Street View

Categories

(Core Graveyard :: Plug-ins, defect)

x86
macOS
defect
Not set
major

Tracking

(blocking2.0 final+)

RESOLVED FIXED
Tracking Status
blocking2.0 --- final+

People

(Reporter: Dolske, Assigned: jaas)

References

Details

Attachments

(1 file)

Seen on current OS X trunk, I think it's been like this for a week or two. 1. Load Google Maps, zoom in to some city 2. Drag the yellow Street View guy to a road 3. Click and drag the Street View, err, view, to try and look left or right. Instead of changing what direction you're looking, the camera swings around to point straight up. You're basically stuck like this; clicking and dragging will make the view wiggle around some (rotate?), but it remains pointing straight up at the sky.
blocking2.0: --- → ?
Severity: normal → major
Bug 435041 (Implement Cocoa NPAPI event model) looks most likely from that range...
Blocks: 435041
Assignee: nobody → joshmoz
Attached patch fix v1.0Splinter Review
This fixes the problem, didn't untangle drag event creation well enough in the Cocoa event model patch.
Attachment #402249 - Flags: review?(roc)
You can probably write a test for this...
We can write mouse event tests for plugins when 515003 lands, it has a native mouse testing infrastructure. Will file a bug on that when it does. pushed to mozilla-central http://hg.mozilla.org/mozilla-central/rev/cb793f6b1dbf
Status: NEW → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
blocking2.0: ? → final+
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: