Fix dragging in Google Maps street view on Mac OS X. b=516602 r=roc